# operad

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  FEATURES.md  INVENTORY.md  ISSUES.md  METAPROMPT.md  Makefile  PLAN.md  README.md  TRAINING.md  VISION.md  demo.py  docker-compose.yml  missing.py  proposal.md  pyproject.toml
.conductor/: 0-0-overview.md  03-agent-overview.md  06-algo-beam.md  1-1-callback-fixes.md  1-1-frontend-foundation.md  1-1-restructure.md  1-2-graph-inversion.md  1-3-dashboard-endpoints.md  1-3-textgrad-optimizer-fixes.md  1-4-human-feedback-cache-invalidation.md  (+95 more)
apps/dashboard/: Dockerfile  README.md  pyproject.toml
apps/dashboard/operad_dashboard/: __init__.py  agent_routes.py  app.py  benchmark_store.py  cassette_replay.py  cli.py  observer.py  opro_sessions.py  persistence.py  replay.py  runs.py
apps/dashboard/operad_dashboard/migrations/: 0001_archive_schema.sql  0002_notes_markdown.sql
apps/dashboard/operad_dashboard/routes/: __init__.py  archive.py  benchmarks.py  cassettes.py  checkpoints.py  debate.py  drift.py  fitness.py  gradients.py  groups.py  iterations.py  mutations.py  progress.py  run_detail.py  sweep.py  tape.py  traceback.py
apps/dashboard/operad_dashboard/static/: app.js  styles.css
apps/dashboard/operad_dashboard/static/js/: drift.js  fitness.js  mutations.js  progress.js  run_detail.js
apps/dashboard/operad_dashboard/templates/: index.html  run_detail.html
apps/dashboard/operad_dashboard/templates/partials/: _drift.html  _fitness.html  _mutations.html  _progress.html
apps/dashboard/tests/: test_agent_classes.py  test_agent_routes.py  test_app.py  test_archive.py  test_batch_ingest.py  test_benchmarks.py  test_cassettes.py  test_checkpoints.py  test_debate.py  test_drift.py  test_fitness.py  test_gradients.py  test_graph_envelope.py  test_iterations.py  test_manifest.py  test_metrics_endpoint.py  test_mutations.py  test_notes_patch.py  test_observer.py  test_parameters_endpoint.py  test_persistence.py  test_progress.py  test_replay.py  test_run_detail.py  test_smoke.py  test_sweep.py  test_synthetic_run_filtering.py  test_tape.py  test_traceback.py
apps/studio/: Dockerfile  README.md  pyproject.toml
apps/studio/operad_studio/: __init__.py  app.py  cli.py  jobs.py  training.py
apps/studio/operad_studio/static/: studio.js  styles.css
apps/studio/operad_studio/templates/: index.html  job.html
apps/studio/tests/: test_jobs.py  test_studio_app.py
apps/uthereal/: .gitignore  Makefile  README.md  pyproject.toml
apps/uthereal/apps_uthereal/: __init__.py  cli.py  errors.py  paths.py  tiers.py
apps/uthereal/apps_uthereal/commands/: __init__.py  _stub.py  blame.py  feedback.py  fix.py  run.py  show.py  verify.py
apps/uthereal/apps_uthereal/feedback/: __init__.py  blamer.py  loss.py  schema.py
apps/uthereal/apps_uthereal/leaves/: __init__.py  _common.py  context_safeguard.py  conversational_talker.py  evidence_planner.py  fact_filter.py  rag_talker.py  reasoner.py  registry.py  retrieval_orchestrator.py  rule_classifier.py  safeguard_talker.py
apps/uthereal/apps_uthereal/retrieval/: __init__.py  client.py
apps/uthereal/apps_uthereal/schemas/: __init__.py  _common.py  evidence.py  reasoner.py  retrieval.py  rules.py  safeguard.py  talker.py  workflow.py
apps/uthereal/apps_uthereal/train/: __init__.py  apply_fix.py
apps/uthereal/apps_uthereal/workflow/: __init__.py  render.py  runner.py  state.py  trace.py
apps/uthereal/fixtures/entries/: demo_entry.json
apps/uthereal/scripts/: schemas_check.py
apps/uthereal/tests/: __init__.py  conftest.py  test_apply_fix.py  test_blamer.py  test_cli.py  test_cmd_blame.py  test_cmd_feedback.py  test_cmd_run.py  test_cmd_show.py  test_cmd_verify.py  test_feedback_loss.py  test_feedback_schema.py  test_leaves.py  test_loader.py  test_run_state.py  test_runner.py  test_schemas.py  test_tiers.py  test_trace.py
apps/uthereal/tests/fixtures/blamer/case_no_fault/: expected.json  feedback.json  trace.jsonl
apps/uthereal/tests/fixtures/blamer/case_off_style/: expected.json  feedback.json  trace.jsonl
apps/uthereal/tests/fixtures/blamer/case_unresolvable/: expected.json  feedback.json  trace.jsonl
apps/uthereal/tests/fixtures/blamer/case_wrong_refusal/: expected.json  feedback.json  trace.jsonl
apps/uthereal/tests/fixtures/blamer/case_wrong_route/: expected.json  feedback.json  trace.jsonl
apps/uthereal/tests/fixtures/runner/char_limit_rejected/: entry.json
apps/uthereal/tests/fixtures/runner/direct_answer/: entry.json
apps/uthereal/tests/fixtures/runner/rag_needed/: entry.json
apps/uthereal/tests/fixtures/runner/safeguard_rejected/: entry.json
apps/uthereal/tests/fixtures/yamls/: context_safeguard.yaml  conv_talker.yaml  evidence_planner.yaml  fact_filter.yaml  fake_leaf.yaml  fake_leaf_with_closure.yaml  rag_talker.yaml  reasoner.yaml  retrieval_orchestrator.yaml  rule_classifier.yaml  safeguard_talker.yaml
(+1319 files in other folders)
