[project]
name = "operad"
version = "0.1.0"
description = "Typed, composable agent architectures for local-first LLM servers."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8",
    "strands-agents>=0.1.0",
    "openai>=2.30.0",
    "pyyaml>=6.0",
]

[project.scripts]
operad = "operad.cli:main"

[project.optional-dependencies]
observers = ["rich>=13.0"]
dashboard = ["operad-dashboard"]
gemini = ["google-genai>=0.3"]
huggingface = ["transformers>=4.40", "torch>=2.2"]
otel = [
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp-proto-http>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live network test; opt-in via OPERAD_INTEGRATION env var",
]

[tool.uv.sources]
operad-dashboard = { path = "apps/dashboard", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["operad"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
