[project]
name = "operad-dashboard"
version = "0.1.0"
description = "Local-first web dashboard for operad: live event stream, agent graph, slot occupancy, cost totals, JSONL replay."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "operad",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
]

[project.scripts]
operad-dashboard = "operad_dashboard.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["operad_dashboard"]

# Ship the React SPA bundle inside the wheel. `web/` is gitignored;
# CI / make build-frontend / Dockerfile populate it before packaging.
[tool.hatch.build.targets.wheel.force-include]
"operad_dashboard/web" = "operad_dashboard/web"
"operad_dashboard/migrations" = "operad_dashboard/migrations"

[tool.uv.sources]
operad = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
