[project]
name = "operad-studio"
version = "0.1.0"
description = "Local-first human-feedback labeling + training launcher for operad."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "operad",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
operad-studio = "operad_studio.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["operad_studio"]

# Ship the React SPA bundle inside the wheel. `web/` is gitignored;
# CI / make build-frontend / Dockerfile populate it before packaging.
[tool.hatch.build.targets.wheel.force-include]
"operad_studio/web" = "operad_studio/web"

[tool.uv.sources]
operad = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
