[project]
name = "apps-uthereal"
version = "0.1.0"
description = "Operad bridge for uthereal selfserve workflow training."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "operad",
    "pydantic>=2",
    "pyyaml>=6",
    "ruamel.yaml>=0.18",
    "httpx>=0.27",
]

[project.scripts]
apps-uthereal = "apps_uthereal.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["apps_uthereal"]

[tool.uv.sources]
operad = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
